fixed the width issue on mobile

--- a/themes/blackpiratex/static/css/style.css
+++ b/themes/blackpiratex/static/css/style.css
@@ -347,6 +347,6 @@ tr {
 }
 .chatbox-div {
     margin: auto;
-    max-width: 50%;
+    max-width: 400px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
